@@ -1,7 +1,6 @@
 package com.rehearse.api.domain.interview.controller;
 
 import com.rehearse.api.domain.interview.dto.InterviewResponse;
-import com.rehearse.api.domain.interview.dto.QuestionResponse;
 import com.rehearse.api.domain.interview.dto.UpdateStatusResponse;
 import com.rehearse.api.domain.interview.entity.*;
 import com.rehearse.api.domain.interview.service.InterviewService;
@@ -18,6 +17,7 @@ import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
@@ -41,7 +41,6 @@ class InterviewControllerTest {
     @Test
     @DisplayName("POST /api/v1/interviews - 면접 세션 생성 성공 (201)")
     void createInterview_success() throws Exception {
-        // given
         InterviewResponse response = createMockInterviewResponse();
         given(interviewService.createInterview(any(), any())).willReturn(response);
 
@@ -57,7 +56,6 @@ class InterviewControllerTest {
         MockMultipartFile requestPart = new MockMultipartFile(
                 "request", "", MediaType.APPLICATION_JSON_VALUE, requestJson.getBytes());
 
-        // when & then
         mockMvc.perform(multipart("/api/v1/interviews")
                         .file(requestPart))
                 .andExpect(status().isCreated())
@@ -67,8 +65,7 @@ class InterviewControllerTest {
                 .andExpect(jsonPath("$.data.level").value("JUNIOR"))
                 .andExpect(jsonPath("$.data.interviewTypes[0]").value("CS_FUNDAMENTAL"))
                 .andExpect(jsonPath("$.data.status").value("READY"))
-                .andExpect(jsonPath("$.data.questions").isArray())
-                .andExpect(jsonPath("$.data.questions.length()").value(2));
+                .andExpect(jsonPath("$.data.questionGenerationStatus").value("PENDING"));
     }
 
     @Test
@@ -112,31 +109,6 @@ class InterviewControllerTest {
     }
 
     @Test
-    @DisplayName("POST /api/v1/interviews - Claude API 실패 시 502")
-    void createInterview_claudeApiFail() throws Exception {
-        given(interviewService.createInterview(any(), any()))
-                .willThrow(new BusinessException(HttpStatus.BAD_GATEWAY, "AI_001", "Claude API 호출 실패"));
-
-        String requestJson = """
-                {
-                    "position": "BACKEND",
-                    "level": "JUNIOR",
-                    "interviewTypes": ["CS_FUNDAMENTAL"],
-                    "durationMinutes": 30
-                }
-                """;
-
-        MockMultipartFile requestPart = new MockMultipartFile(
-                "request", "", MediaType.APPLICATION_JSON_VALUE, requestJson.getBytes());
-
-        mockMvc.perform(multipart("/api/v1/interviews")
-                        .file(requestPart))
-                .andExpect(status().isBadGateway())
-                .andExpect(jsonPath("$.code").value("AI_001"))
-                .andExpect(jsonPath("$.message").value("Claude API 호출 실패"));
-    }
-
-    @Test
     @DisplayName("GET /api/v1/interviews/{id} - 조회 성공 (200)")
     void getInterview_success() throws Exception {
         InterviewResponse response = createMockInterviewResponse();
@@ -146,7 +118,7 @@ class InterviewControllerTest {
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.success").value(true))
                 .andExpect(jsonPath("$.data.id").value(1))
-                .andExpect(jsonPath("$.data.questions.length()").value(2));
+                .andExpect(jsonPath("$.data.questionGenerationStatus").value("PENDING"));
     }
 
     @Test
@@ -215,49 +187,44 @@ class InterviewControllerTest {
     @Test
     @DisplayName("POST /api/v1/interviews/{id}/follow-up - questionContent 누락 시 400")
     void generateFollowUp_missingQuestionContent() throws Exception {
-        String requestBody = """
+        String requestJson = """
                 {
+                    "questionSetId": 1,
                     "answerText": "답변입니다."
                 }
                 """;
 
-        mockMvc.perform(post("/api/v1/interviews/1/follow-up")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(requestBody))
+        MockMultipartFile requestPart = new MockMultipartFile(
+                "request", "", MediaType.APPLICATION_JSON_VALUE, requestJson.getBytes());
+
+        mockMvc.perform(multipart("/api/v1/interviews/1/follow-up")
+                        .file(requestPart))
                 .andExpect(status().isBadRequest())
                 .andExpect(jsonPath("$.code").value("VALIDATION_ERROR"));
     }
 
     @Test
-    @DisplayName("POST /api/v1/interviews/{id}/follow-up - answerText 누락 시 400")
-    void generateFollowUp_missingAnswerText() throws Exception {
-        String requestBody = """
-                {
-                    "questionContent": "질문입니다."
-                }
-                """;
+    @DisplayName("POST /api/v1/interviews/{id}/retry-questions - 재시도 성공 (200)")
+    void retryQuestionGeneration_success() throws Exception {
+        InterviewResponse response = createMockInterviewResponse();
+        given(interviewService.retryQuestionGeneration(1L)).willReturn(response);
 
-        mockMvc.perform(post("/api/v1/interviews/1/follow-up")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(requestBody))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.code").value("VALIDATION_ERROR"));
+        mockMvc.perform(post("/api/v1/interviews/1/retry-questions"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.success").value(true))
+                .andExpect(jsonPath("$.data.id").value(1));
     }
 
     private InterviewResponse createMockInterviewResponse() {
-        QuestionResponse q1 = QuestionResponse.builder()
-                .id(1L).content("HashMap과 TreeMap의 차이점은?").category("자료구조").order(1).build();
-        QuestionResponse q2 = QuestionResponse.builder()
-                .id(2L).content("프로세스와 스레드의 차이점은?").category("운영체제").order(2).build();
-
         return InterviewResponse.builder()
                 .id(1L)
                 .position(Position.BACKEND)
                 .level(InterviewLevel.JUNIOR)
                 .interviewTypes(List.of(InterviewType.CS_FUNDAMENTAL))
                 .status(InterviewStatus.READY)
+                .questionGenerationStatus(QuestionGenerationStatus.PENDING)
                 .durationMinutes(30)
-                .questions(List.of(q1, q2))
+                .questionSets(Collections.emptyList())
                 .createdAt(LocalDateTime.of(2026, 3, 10, 14, 30, 0))
                 .build();
     }
